# mousse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: encode.rs  reqwest.rs
proptest-regressions/: lib.txt
scripts/: headless-firefox.sh
src/: lib.rs
tests/: browser_client.rs  warp.rs
tests/browser_client_assets/: index.html  index.js
