[package]
name = "mousse"
version = "0.1.1"
edition = "2018"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
license = "MIT"
description = "A set of encoder and decoder for server sent events"
keywords = ["http", "sse", "server-sent", "events"]
repository = "https://github.com/FreeMasen/mousse"


[dependencies]
log = "0.4"

[dev-dependencies]
proptest = "1"
env_logger = "0.9"
warp = "0.3"
regex_generate = "0.2"
rand = "0.7"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
fantoccini = "0.17"
reqwest = { version = "0.11", features = ["stream"] }
